<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailFilmActivity">
    <RelativeLayout
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:id="@+id/frm_layout"
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/background_avenger"
                    android:id="@+id/img_background"
                    android:scaleType="fitCenter"
                    />

                <TextView
                    android:paddingBottom="10dp"
                    android:id="@+id/tv_title"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_background"
                    android:layout_alignEnd="@id/img_background"
                    android:textColor="@android:color/white"
                    android:layout_margin="10dp"
                    android:gravity="end"
                    android:text="@string/lorem_title" />
            </RelativeLayout>
        </FrameLayout>
        <ImageView
            android:layout_alignBottom="@id/frm_layout"
            android:id="@+id/img_poster"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/poster_avengerinfinity"
            android:scaleType="fitStart"
            />
        <LinearLayout
            android:layout_below="@id/img_poster"
            android:id="@+id/layout_rate"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerInParent="true"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="100"
                    android:progressDrawable="@drawable/custom_progressbar_drawable"
                    android:secondaryProgress="0" />

                <TextView
                    android:id="@+id/txtProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:layout_alignBottom="@+id/progressBar"
                    android:layout_centerInParent="true"
                    android:textColor="@android:color/white"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_score"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textColor="@android:color/white"
                />
            <ImageView
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:tint="@android:color/white"
                android:src="@drawable/date_ic"
                />
            <TextView
                android:id="@+id/rv_release_date"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/lorem_date"
                android:layout_gravity="center"
                />
        </LinearLayout>
        <TextView
            android:textStyle="bold"
            android:layout_below="@id/layout_rate"
            android:id="@+id/lb_overview"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            />
        <TextView
            android:layout_below="@id/lb_overview"
            android:id="@+id/tv_overview"
            android:layout_margin="10dp"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorep_overview"
            android:textColor="@android:color/white"
            />
        <TextView
            android:textStyle="bold"
            android:layout_below="@id/tv_overview"
            android:id="@+id/lb_homepage"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homepage"
            />
        <TextView
            android:layout_below="@id/lb_homepage"
            android:id="@+id/tv_homepage"
            android:layout_margin="10dp"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_homepage"
            android:layout_marginBottom="16dp"
            />
    </RelativeLayout>

</ScrollView>